--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "3.0.3",
+  "version": "3.0.4",
   "name": "cordova-plugin-fcm",
   "cordova_name": "Cordova FCM Push Plugin",
   "description": "Google Firebase Cloud Messaging Cordova Push Plugin",
@@ -7,12 +7,12 @@
   "repo": "",
   "issue": "",
   "author": {
-    "name": "Christopher Palmer, Oliver Blum",
-    "email": "chrisjpalmer@optusnet.com.au, olliblum@gmail.com"
+    "name": "Christopher Palmer, Oliver Blum, Stephen Rhyne",
+    "email": "chrisjpalmer@optusnet.com.au, olliblum@gmail.com, stephen@conveyour.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ostownsville/cordova-plugin-fcm"
+    "url": "https://github.com/ConveYour/cordova-plugin-fcm"
   },
   "keywords": [
     "ecosystem:cordova",
